done rate
