# requests/rate_request.go
@@ -1,0 +1,6 @@
+package requests
+
+type RequestRate struct {
+	ProductId int `json:"product_id" xml:"product_id"`
+	Rate      int `json:"rate" xml:"rate"`
+}
